(lang dune 2.8)
(name smol)
(version 0.0.1)
(generate_opam_files true)
(source (uri git+https://github.com/lrand-nl/smol))
(bug_reports http://github.com/lrand-nl/smol)
(homepage http://github.com/lrand-nl/smol)
(authors "Lucas Randazzo")
(maintainers "lucas.randazzo@nomadic-labs.com")

(package
 (name smol)
 (synopsis "Small Math Ocaml Library")
 (description "A partial high-level implementation of math and algebra")
 (license MIT)
 (depends (dune (>= 2.8))
 	  (ocaml (>= 4.08.0))
    	  (alcotest :with-test))
)

(package
 (name smol.helpers)
 (synopsis "Small Math Ocaml Library (with test helpers)")
 (description "A partial high-level implementation of math and algebra (with test helpers)")
 (license MIT)
 (depends (dune (>= 2.8))
 	  (ocaml (>= 4.08.0))
    	  alcotest)
)
