(lang dune 2.8)
(name smol)
(version 0.0.1)
(generate_opam_files true)
(source (uri git+https://github.com/lrand-nl/smol))
(bug_reports http://github.com/lrand-nl/smol)
(homepage http://github.com/lrand-nl/smol)
(authors "Lucas Randazzo")
(maintainers "lucas.randazzo@nomadic-labs.com")

(package
 (name smol)
 (synopsis "Small Math Ocaml Library")
 (description "A partial high-level implementation of math and algebra")
 (license MIT)
 (depends (dune (>= 2.8))
 	  (ocaml (>= 4.12.0))
	  (alcotest (and :with-test (>= 1.4.0))))
)

(package
 (name smol-helpers)
 (synopsis "Test helpers for smol")
 (description "Test helpers for smol")
 (license MIT)
 (depends (dune (>= 2.8))
 	  (ocaml (>= 4.12.0))
    	  (alcotest (>= 1.4.0))
	  (smol (= :version)))
)
