(executables
 (names main)
 (libraries alcotest
	    smol))

(rule
 (action (copy# ../src/test_helpers/test_helpers.ml test_helpers.ml)))

(rule
 (alias buildtest)
 (deps main.exe)
 (action (progn)))

(rule
 (alias runtest_main)
 (action (run %{exe:main.exe})))

(rule
 (alias runtest)
 (package smol)
 (deps (alias runtest_main))
 (action (progn)))